; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_w83793.c_watchdog_trigger.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_w83793.c_watchdog_trigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.w83793_data = type { i32, i32, i32 }

@ENODEV = common dso_local global i32 0, align 4
@W83793_REG_WDT_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.w83793_data*)* @watchdog_trigger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @watchdog_trigger(%struct.w83793_data* %0) #0 {
  %2 = alloca %struct.w83793_data*, align 8
  %3 = alloca i32, align 4
  store %struct.w83793_data* %0, %struct.w83793_data** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.w83793_data*, %struct.w83793_data** %2, align 8
  %5 = getelementptr inbounds %struct.w83793_data, %struct.w83793_data* %4, i32 0, i32 0
  %6 = call i32 @mutex_lock(i32* %5)
  %7 = load %struct.w83793_data*, %struct.w83793_data** %2, align 8
  %8 = getelementptr inbounds %struct.w83793_data, %struct.w83793_data* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @ENODEV, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %23

14:                                               ; preds = %1
  %15 = load %struct.w83793_data*, %struct.w83793_data** %2, align 8
  %16 = getelementptr inbounds %struct.w83793_data, %struct.w83793_data* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @W83793_REG_WDT_TIMEOUT, align 4
  %19 = load %struct.w83793_data*, %struct.w83793_data** %2, align 8
  %20 = getelementptr inbounds %struct.w83793_data, %struct.w83793_data* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @w83793_write_value(i32 %17, i32 %18, i32 %21)
  br label %23

23:                                               ; preds = %14, %11
  %24 = load %struct.w83793_data*, %struct.w83793_data** %2, align 8
  %25 = getelementptr inbounds %struct.w83793_data, %struct.w83793_data* %24, i32 0, i32 0
  %26 = call i32 @mutex_unlock(i32* %25)
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @w83793_write_value(i32, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
